changed navbar colors to make sure they are readible and have right contrast

--- a/src/shared/components/Navigation/MainHeader.css
+++ b/src/shared/components/Navigation/MainHeader.css
@@ -6,7 +6,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    background: #00ff37cb;
+    background: #004d00;
     box-shadow: 0 2px 6px rgba(96, 205, 76, 0.26);
     padding: 0 1rem;
     z-index: 5;
