--- a/src/shared/components/Navigation/MainNavigation.css
+++ b/src/shared/components/Navigation/MainNavigation.css
@@ -18,12 +18,12 @@
   }
   
   .main-navigation__title {
-    color: white;
+    color: #e6e6e6;
   }
   
   .main-navigation__title a {
     text-decoration: none;
-    color: white;
+    color: #e6e6e6;
   }
   
   .main-navigation__header-nav {
